--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -15,7 +15,7 @@
 <section class="presentation" style="font-family: sans-serif; max-width: 1200px; margin: auto; padding: 2rem; display: flex; gap: 2rem; align-items: flex-start; color:white;">
   <!-- Colonne gauche : image -->
   <div style="flex: 1;">
-    <img src="https://www.capeb.fr/www/capeb/media//aisne/image/ma%C3%A7on.jpg" alt="Maçon au travail" style="width: 100%; height: auto; border-radius: 8px;">
+    <img src="image/maçon-removebg-preview.png" alt="Maçon au travail" style="width: 100%; height: auto; border-radius: 8px;">
   </div>
 
   <!-- Colonne droite : texte -->
