--- a/templates/header/header.html.twig
+++ b/templates/header/header.html.twig
@@ -17,6 +17,10 @@
         <li class="nav-item">
           <a class="nav-link" href="{{ path('app_contact') }}">Contact</a>
         </li>
+                <li class="nav-item">
+          <a class="nav-link" href="{{ path('app_chantier_index') }}">Chantier</a>
+        </li>
+
       </ul>
 
       <form class="d-flex ms-4" role="search">
