structuration du form

--- a/templates/chantier/show.html.twig
+++ b/templates/chantier/show.html.twig
@@ -30,9 +30,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_chantier_index') }}">back to list</a>
+    <a href="{{ path('app_chantier_index') }}" class="btn btn-primary">back to list</a>
 
-    <a href="{{ path('app_chantier_edit', {'id': chantier.id}) }}">edit</a>
+    <a href="{{ path('app_chantier_edit', {'id': chantier.id}) }}" class="btn btn-primary">edit</a>
 
     {{ include('chantier/_delete_form.html.twig') }}
 {% endblock %}
