--- a/templates/chantier/edit.html.twig
+++ b/templates/chantier/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('chantier/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_chantier_index') }}">back to list</a>
+    <a href="{{ path('app_chantier_index') }}" class="btn btn-primary">Retour à la liste</a>
 
     {{ include('chantier/_delete_form.html.twig') }}
 {% endblock %}
