--- a/templates/chantier/index.html.twig
+++ b/templates/chantier/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Chantier index{% endblock %}
+{% block title %}Chantier{% endblock %}
 
 {% block body %}
-    <h1 style = "color:white;">Chantier index</h1>
+    <h1 style = "color:white;">Liste des chantiers recent</h1>
 
     <table class="table">
         <thead>
@@ -31,11 +31,11 @@
             </tr>
         {% else %}
             <tr>
-                <td colspan="6">no records found</td>
+                <td colspan="6">Aucun chantier trouvé</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    <a href="{{ path('app_chantier_new') }}">Create new</a>
+    <a href="{{ path('app_chantier_new') }}" class ="btn btn-primary">Créer un nouveau chantier</a>
 {% endblock %}
