--- a/templates/chantier/new.html.twig
+++ b/templates/chantier/new.html.twig
@@ -3,9 +3,14 @@
 {% block title %}New Chantier{% endblock %}
 
 {% block body %}
-    <h1>Create new Chantier</h1>
+<style>
+    body{
+        color:white;
+    }
+</style>
+    <h1>Creation Nouveau Chantier</h1>
 
     {{ include('chantier/_form.html.twig') }}
 
-    <a href="{{ path('app_chantier_index') }}">back to list</a>
+    <a href="{{ path('app_chantier_index') }}" class="btn btn-primary" >Retour à la liste</a>
 {% endblock %}
