--- a/templates/chantier/_delete_form.html.twig
+++ b/templates/chantier/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_chantier_delete', {'id': chantier.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('app_chantier_delete', {'id': chantier.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer cet élément ?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ chantier.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-primary m-2">Supprimer</button>
 </form>
