--- a/templates/chantier/edit.html.twig
+++ b/templates/chantier/edit.html.twig
@@ -1,13 +1,28 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Chantier{% endblock %}
+{% block title %}Modification Chantier{% endblock %}
 
 {% block body %}
-    <h1>Edit Chantier</h1>
+<style>
+    body {
+        color: white;
+    }
+</style>
+    <h1>Modifier Chantier</h1>
 
-    {{ include('chantier/_form.html.twig', {'button_label': 'Update'}) }}
+    <div class"d-flex justify-content-center align-items-center mt-5 form-control">
+        {% if app.user %}
+            <p>Bienvenue, {{ app.user.username }}!</p>
+        {% else %}
+            <p>Veuillez vous connecter pour modifier le chantier.</p>
+        {% endif %}
+    {{ include('chantier/_form.html.twig', {'button_label': 'Mise à jour'}) }}
+    </div>
+
+<div class="container d-flex justify-content-center align-items-start mt-5 min-vh-100 col-12 col-md-8 col-lg-6">
 
     <a href="{{ path('app_chantier_index') }}" class="btn btn-primary">Retour à la liste</a>
 
     {{ include('chantier/_delete_form.html.twig') }}
+</div>
 {% endblock %}
