--- a/templates/chantier/index.html.twig
+++ b/templates/chantier/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Chantier{% endblock %}
 
 {% block body %}
-    <h1 style = "color:white;">Liste des chantiers recent</h1>
+    <h1 style = "color:white; text-align:center;" class="my-5">Liste des chantiers recent</h1>
 
     <table class="table">
         <thead>
@@ -25,8 +25,16 @@
                 <td>{{ chantier.image }}</td>
                 <td>{{ chantier.date ? chantier.date|date('Y-m-d H:i:s') : '' }}</td>
                 <td>
-                    <a href="{{ path('app_chantier_show', {'id': chantier.id}) }}">show</a>
-                    <a href="{{ path('app_chantier_edit', {'id': chantier.id}) }}">edit</a>
+                <div class="d-flex gap-2 flex-wrap">
+                    <a class="btn btn-info" href="{{ path('app_chantier_show', {'id': chantier.id}) }}">Voir</a>
+                    <a class="btn btn-warning" href="{{ path('app_chantier_edit', {'id': chantier.id}) }}">Modifier</a>
+                    <form method="post" action="{{ path('app_chantier_delete', {'id': chantier.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer cet élément ?');">
+                        <input type="hidden" name="_method" value="DELETE">
+                        <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ chantier.id) }}">
+                        <button class="btn btn-danger">Supprimer</button>
+                    </form>
+                </div>
+
                 </td>
             </tr>
         {% else %}
