mise en place user+form

--- a/templates/chantier/edit.html.twig
+++ b/templates/chantier/edit.html.twig
@@ -8,21 +8,29 @@
         color: white;
     }
 </style>
-    <h1>Modifier Chantier</h1>
 
+	<h1 class ="py-3">Modification de chantier</h1>
+    
     <div class"d-flex justify-content-center align-items-center mt-5 form-control">
         {% if app.user %}
             <p>Bienvenue, {{ app.user.username }}!</p>
         {% else %}
             <p>Veuillez vous connecter pour modifier le chantier.</p>
         {% endif %}
-    {{ include('chantier/_form.html.twig', {'button_label': 'Mise à jour'}) }}
     </div>
 
-<div class="container d-flex justify-content-center align-items-start mt-5 min-vh-100 col-12 col-md-8 col-lg-6">
+	{{ form_start(form, {'attr': {'enctype': 'multipart/form-data'}}) }}
 
-    <a href="{{ path('app_chantier_index') }}" class="btn btn-primary">Retour à la liste</a>
+	{{ form_row(form.nom) }}
+	{{ form_row(form.description) }}
+	{{ form_row(form.date) }}
+	{{ form_row(form.image) }}
+    
+	<div class ="py-5">
+        {{ include('chantier/_form.html.twig', {'button_label': 'Mise à jour'}) }}
+		<button class="btn btn-success">Sauvegarder</button>
+		<a href="{{ path('app_chantier_index') }}" class="btn btn-secondary">Retour à la liste</a>
+	</div>
+	{{ form_end(form) }}
 
-    {{ include('chantier/_delete_form.html.twig') }}
-</div>
 {% endblock %}
