--- a/templates/header/header.html.twig
+++ b/templates/header/header.html.twig
@@ -28,5 +28,7 @@
         <button class="btn btn-outline-success" type="submit">Rechercher</button>
       </form>
     </div>
+    <button href="{{ path('app_login') }}" class="btn btn-outline-primary">Connexion</button>
+    <button href="" class="btn btn-outline-primary">Inscription</button>
   </div>
 </nav>
