--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -53,7 +53,7 @@
     <p>
       Vous avez un projet ? Parlons-en !<br>
       <strong>Devis gratuit</strong> et conseils sur mesure.<br>
-      Appelez-nous au <strong>0327000000</strong> ou envoyez-nous un message via le <a href="#">formulaire de contact</a>.
+      Appelez-nous au <strong>0327000000</strong> ou envoyez-nous un message via le <a href="/contact">formulaire de contact</a>.
     </p>
   </div>
 </section>
