--- a/templates/chantier/show.html.twig
+++ b/templates/chantier/show.html.twig
@@ -17,7 +17,7 @@
 <div class ="d-flex justify-content-center align-items-center gap-5">
 <a href="{{ path('app_chantier_index') }}" class="btn btn-primary">retour à la liste</a>
 
-<a href="{{ path('app_chantier_edit', {'id': chantier.id}) }}" class="btn btn-primary">Modifier</a>
+<a href="{{ path('app_chantier_edit', {'id': chantier.id}) }}" class="btn btn-warning">Modifier</a>
 {{ include('chantier/_delete_form.html.twig') }}
 </div>
 
