mise en place inscription/connexion

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,39 +1,40 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Connexion/inscription{% endblock %}
+{% block title %}Connexion
+{% endblock %}
+
 
 {% block body %}
-<style>
-    body{
-        color:white;
-    }
-</style>
-    <form action="{{ path('app_login') }}" method="post">
-        {% if error %}
-            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-        {% endif %}
+	<style>
+		body {
+			color: white;
+		}
+	</style>
 
-        {% if app.user %}
-            <div class="mb-3">
-                You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Deconnectez-vous</a>
-            </div>
-        {% endif %}
+	<form method="post">
+		<div class="container">
+			{% if error %}
+				<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+			{% endif %}
 
-        <h1 class="h3 mb-3 font-weight-normal">Veuillez-vous connecter ou vous inscrire</h1>
-        <label for="username">Email</label>
-        <input type="email" value="{{ last_username }}" name="_username" id="username" class="form-control" autocomplete="email" required autofocus>
-        <label for="password">Mot de passe</label>
-        <input type="password" name="_password" id="password" class="form-control mb-3" autocomplete="current-password" required>
-        <input type="hidden" name="_csrf_token" data-controller="csrf-protection" value="{{ csrf_token('authenticate') }}">
+			{% if app.user %}
+				<div class="mb-3">
+					Vous êtes connecté en tant que
+					{{ app.user.userIdentifier }},
+					<a href="{{ path('app_logout') }}">Déconnexion</a>
+				</div>
+			{% endif %}
 
-        
-            <div class="checkbox ">
-                <input type="checkbox" name="_remember_me" id="_remember_me">
-                <label for="_remember_me">Se souvenir de moi</label>
-            </div>
-       
-        <button class="btn btn-lg btn-primary mt-3" type="submit">
-            Connexion
-        </button>
-    </form>
+			<h1 class="h3 mb-3 font-weight-normal text-center">Veuillez vous connecter</h1>
+			<label for="inputEmail">Email</label>
+			<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control m-2" autocomplete="email" required autofocus>
+			<label for="inputPassword">Mot de passe</label>
+			<input type="password" name="password" id="inputPassword" class="form-control m-2" autocomplete="current-password" required>
+			<input type="hidden" name="_csrf_token" data-controller="csrf-protection" value="{{ csrf_token('authenticate') }}">
+
+			<button class="btn btn-lg btn-primary m-3" type="submit">
+				Se connecter
+			</button>
+		</div>
+	</form>
 {% endblock %}
