--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -20,7 +20,7 @@
 			{% if app.user %}
 				<div class="mb-3">
 					Vous êtes connecté en tant que
-					{{ app.user.userIdentifier }},
+					{{ app.user.pseudo }},
 					<a href="{{ path('app_logout') }}">Déconnexion</a>
 				</div>
 			{% endif %}
@@ -32,9 +32,7 @@
 			<input type="password" name="password" id="inputPassword" class="form-control m-2" autocomplete="current-password" required>
 			<input type="hidden" name="_csrf_token" data-controller="csrf-protection" value="{{ csrf_token('authenticate') }}">
 
-			<button class="btn btn-lg btn-primary m-3" type="submit">
-				Se connecter
-			</button>
+			<button class="btn btn-lg btn-primary m-3" type="submit">Se connecter</button>
 		</div>
 	</form>
 {% endblock %}
