--- a/templates/footer/index.html.twig
+++ b/templates/footer/index.html.twig
@@ -11,7 +11,7 @@
           <i class="bi bi-bootstrap fs-2" style="color: black;"></i>
         </a>
         <span class="text-body-secondary" style="color: black;">
-          <strong>maçon@outlook.com</strong>
+          <strong>📧 maçon@outlook.com</strong>
         </span>
       </div>
 
