--- a/templates/services/index.html.twig
+++ b/templates/services/index.html.twig
@@ -14,6 +14,7 @@
           <div class="card-body">
             <p class="card-text">{{ service.description }}</p>
           </div>
+          <button class="btn btn-danger m-2">voir les chantiers</button>
         </div>
       </div>
     {% endfor %}
